feat: add dto para emcapsular dtos de respostas a operacoes e respostas a requisicoes